# Everest

./: CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  environment.yml
include/: Graph.h  data.h  helpers.cuh
inputs/: README.md
inputs/motifs/: M1.txt  M10.txt  M11.txt  M12.txt  M13.txt  M2.txt  M3.txt  M4-A.txt  M4.txt  M5.txt  M6.txt  M7.txt  M8.txt  M9.txt
plugins/: CMakeLists.txt  GPUWorkerBaseline.cu  GPUWorkerU0.cu  GPUWorkerU1.cu  GPUWorkerU1B.cu  GPUWorkerU2.cu  GPUWorkerU3.cu  GPUWorkerU3B.cu  Makefile
src/: CMakeLists.txt
src/core/cpu/: Graph.cc  data.cc
src/core/gpu/: data.cu
src/mods/: corelib.cc
src/tools/: cacheGraph.cc  generateRand.cc
system/: batch-query.py  filter.py  generateQueries.py  legacy.py  process-batch-query.sh  process-single-query.sh  run-legacy.sh  single-query.py
system/queries/: generated.yaml  generatedQuery.yaml
system/queries/additional-features/: ETH-M4-all.yaml  ETH-M4-f.yaml  ETH-M4-no.yaml  ETH-M4-t.yaml  ETH-M4-v.yaml  RE-M4-all.yaml  RE-M4-f.yaml  RE-M4-no.yaml  RE-M4-t.yaml  RE-M4-v.yaml  SO-M4-all.yaml  SO-M4-f.yaml  SO-M4-no.yaml  SO-M4-t.yaml  SO-M4-v.yaml  WI-M4-all.yaml  WI-M4-f.yaml  WI-M4-no.yaml  WI-M4-t.yaml  WI-M4-v.yaml
system/queries/basics/all/ethereum/: M1.yaml  M10.yaml  M11.yaml  M12.yaml  M13.yaml  M2.yaml  M3.yaml  M4.yaml  M5.yaml  M6.yaml  M7.yaml  M8.yaml  M9.yaml
system/queries/basics/all/sx-stackoverflow/: M1.yaml  M10.yaml  M11.yaml  M12.yaml  M13.yaml  M2.yaml  M3.yaml  M4.yaml  M5.yaml  M6.yaml  M7.yaml  M8.yaml  M9.yaml
system/queries/basics/all/temporal-reddit-reply/: M1.yaml  M10.yaml  M11.yaml  M12.yaml  M13.yaml  M2.yaml  M3.yaml  M4.yaml  M5.yaml  M6.yaml  M7.yaml  M8.yaml  M9.yaml
system/queries/enumerate/: enumerate-example-multi.yaml  enumerate-example.yaml
system/queries/examples/: simpleQuery.yaml
system/queries/multiGPU/: ETH-M5-2.yaml  ETH-M5-4.yaml  ETH-M6-2.yaml  ETH-M6-4.yaml  ETH-M7-2.yaml  ETH-M7-4.yaml  ETH-M8-2.yaml  ETH-M8-4.yaml  RE-M5-2.yaml  RE-M5-4.yaml  RE-M6-2.yaml  RE-M6-4.yaml  RE-M7-2.yaml  RE-M7-4.yaml  RE-M8-2.yaml  RE-M8-4.yaml
system/queries/prof/: WI-M6.yaml
system/scripts/: prof.sh
system/templates/: README.md  top.snp
system/templates/GPUWorker/: NumBlocks.snp  ctor.snp  declare.snp  dtor.snp  interface.snp  pause.snp  run.snp  take.snp  top.snp  update.snp
system/templates/Impl/: argList.snp  launchDispatch.snp  launchErrchk.snp  result.snp  top.snp
system/templates/common/: declareVarForExec.snp  elseBreak.snp  explorationLoop.snp  findMatch.snp  lookAtMatchRes.snp  mapFirst.snp  nextLevel.snp  nextMatchInTask.snp  recovermi.snp  resolveMi.snp  structuralConstraint.snp  updateLoopCnt.snp  warpReduceOutput.snp
system/templates/constraints/: vertexConsCallFirst.snp  vertexConsCallLoop.snp  vertexConsFuncs.snp
system/templates/dispatch/: argList.snp  ending.snp  processFirstEdge.snp  tidBeg.snp  top.snp
system/templates/enumerate/: func.snp
system/templates/funcs/: firstLarger.snp  probeEnd.snp  reduceEarlyIdx.snp
system/templates/tailExpan/: Expanding.snp  NumBlocks.snp  TContext.snp  execMemDeclare.snp  execMemFree.snp  execMemInit.snp  timeUp.snp
system/templates/tailExpan/argList/: dispatch.snp
system/templates/tailExpan/argPass/: Impl2dispatch.snp  Worker2Impl.snp
system/templates/tailExpan/common/: firstTid.snp  tidBeg.snp  tidEnd.snp
system/templates/tailExpan/dump/: argListDump.snp  func.snp
system/templates/tailExpan/expand/: ending.snp  loadDump.snp  top.snp
system/templates/warpBalancing/: top.snp
system/tmine/: KernelGen.py  Query.py  QueryGen.py  core.py  frontend.py  locations.py  utils.py
system/tools/: compare-enum.py
(+117 files in other folders)
